Fix bio spacing

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -227,6 +227,7 @@ pre {
  */
 p span {
   display: inline-block;
+  white-space: pre;
 }
 
 /**
